made a minor fix in the <label> flex and gap values

--- a/styles.css
+++ b/styles.css
@@ -62,8 +62,9 @@ fieldset {
 
 .checkboxes label {
     display: flex;
-    flex-direction: row:
+/*     flex-direction: row: */
     align-items: center;
+    gap: 3px;
 }
 
 button {
